# fetchira

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml  fetchira.toml.example
docs/: architecture.html
skills/fetchira/: SKILL.md
src/: cli.rs  config.rs  error.rs  httptrace.rs  instances.rs  lib.rs  main.rs  price.rs  proxy.rs  router.rs  ui.rs  update.rs  usage.rs  web.rs
src/mcp/: mod.rs
src/providers/: chatgpt_browser.rs  chatgpt_sentinel.rs  chatgpt_web.rs  exa.rs  firecrawl.rs  gemini_web.rs  grok_web.rs  jina.rs  mod.rs  niche.rs  parallel.rs  serper.rs  steel.rs  tavily.rs
tests/: router_self_check.rs
webui/: _ds_bundle.js
webui/ui_kits/dashboard/: AccountsTab.jsx  ActivityTab.jsx  AddAccountModal.jsx  DebugTab.jsx  GettingStarted.jsx  Onboarding.jsx  OverviewTab.jsx  data.js  index.html
